feat: cobertura de testes ajustadas.